[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/LevelCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Bulb/Bulb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Bulb/TimedBulbBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/AirLock/BreakableAirLock.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/TileMap/ShipMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/Torch/Torch.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level9/Level9.gd" type="Script" id=8]

[node name="Level9" type="Node2D"]
script = ExtResource( 8 )

[node name="TileMap" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( -65536, 6, 0, -65535, 4, 0, 0, 1, 0, 1, 4, 0 )

[node name="BreakableAirLock" parent="TileMap" instance=ExtResource( 5 )]
position = Vector2( -256, 128 )
left_open_first = true

[node name="Button" parent="TileMap" instance=ExtResource( 2 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 264.041, -131.18 )

[node name="Starts" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Starts"]
position = Vector2( 272.45, 141.271 )

[node name="Position2D2" type="Position2D" parent="Starts"]
position = Vector2( 265.723, -127.816 )

[node name="HiddenObjectives" type="Node2D" parent="."]
visible = false

[node name="TimedBulbBase" parent="HiddenObjectives" instance=ExtResource( 4 )]
position = Vector2( 403.63, 223.678 )

[node name="Bulb" parent="HiddenObjectives" instance=ExtResource( 3 )]
position = Vector2( -188.361, -127.816 )
angular_velocity = -2.0

[node name="Torch" parent="HiddenObjectives" instance=ExtResource( 7 )]
position = Vector2( -206.861, 131.18 )
angular_velocity = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0

[node name="LevelCore" parent="." instance=ExtResource( 1 )]
